--- a/.github/workflows/build-gradle-project.yml
+++ b/.github/workflows/build-gradle-project.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Run Tests
-	run: ./gradlew test
+      - name: Run tests
+        run: ./gradlew test
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
